--- a/benchmarks/vmware/pubsub/roles/mqtt_vms/tasks/main.yml
+++ b/benchmarks/vmware/pubsub/roles/mqtt_vms/tasks/main.yml
@@ -8,10 +8,10 @@
   include: roles/mqtt_vms/tasks/common/remove.yml
   tags: remove_common
 
-- name: setup mqtt
-  include: roles/mqtt_vms/tasks/setup.yml
-  tags: setup_mqtt
+- name: launch mqtt
+  include: roles/mqtt_vms/tasks/launch.yml
+  tags: launch_mqtt
 
-- name: cleanup mqtt
-  include: roles/mqtt_vms/tasks/cleanup.yml
-  tags: cleanup_mqtt
+- name: destroy mqtt
+  include: roles/mqtt_vms/tasks/destroy.yml
+  tags: destroy_mqtt
