added scripts for zeromq

--- a/benchmarks/vmware/pubsub/roles/zeromq_vms/tasks/common/install.yml
+++ b/benchmarks/vmware/pubsub/roles/zeromq_vms/tasks/common/install.yml
@@ -5,6 +5,11 @@
   apt:
     update_cache: yes
 
+- name: install htop
+  become: true
+  apt:
+    name: htop
+
 - name: install git
   become: true
   apt:
