--- a/benchmarks/vmware/pubsub/roles/zeromq_vms/tasks/main.yml
+++ b/benchmarks/vmware/pubsub/roles/zeromq_vms/tasks/main.yml
@@ -7,3 +7,11 @@
 - name: remove common utilities
   include: roles/zeromq_vms/tasks/common/remove.yml
   tags: remove_common
+
+- name: launch zeromq
+  include: roles/zeromq_vms/tasks/launch.yml
+  tags: launch_zeromq
+
+- name: destroy zeromq
+  include: roles/zeromq_vms/tasks/destroy.yml
+  tags: destroy_zeromq
