--- a/benchmarks/vmware/pubsub/roles/zeromq_vms/tasks/common/install.yml
+++ b/benchmarks/vmware/pubsub/roles/zeromq_vms/tasks/common/install.yml
@@ -59,5 +59,4 @@
          ./configure --enable-drafts;
          make -j4;
          make install;
-         ldconfig;
-         cd ~/
+         ldconfig
