--- a/benchmarks/vmware/pubsub/roles/zeromq_vms/tasks/launch.yml
+++ b/benchmarks/vmware/pubsub/roles/zeromq_vms/tasks/launch.yml
@@ -47,6 +47,13 @@
   when: '"publisher" in pubsub_nodes[inventory_hostname].type'
   become: true
 
+- name: upload log_kvm_stats.sh script to publishers' host
+  template:
+    src: roles/zeromq_vms/templates/log_kvm_stats.sh.j2
+    dest: /tmp/log_kvm_stats.sh
+  when: '"publisher" in pubsub_nodes[inventory_hostname].type'
+  delegate_to: "{{ pubsub_nodes[inventory_hostname].host }}"
+
 - name: launch dish_*
   shell: cd /home/mshahbaz/libzmq/tests;
          ./dish_{{ port }} &
@@ -69,3 +76,9 @@
   shell: sh /tmp/log_radio_stats.sh &
   when: '"publisher" in pubsub_nodes[inventory_hostname].type'
   become: true
+
+- name: log kvm stats
+  shell: sh /tmp/log_kvm_stats.sh &
+  when: '"publisher" in pubsub_nodes[inventory_hostname].type'
+  delegate_to: "{{ pubsub_nodes[inventory_hostname].host }}"
+
