--- a/benchmarks/vmware/pubsub/vars/zeromq_vms/configs/zeromq-1x1-2x1-3x1-7,8,9xnone.yml
+++ b/benchmarks/vmware/pubsub/vars/zeromq_vms/configs/zeromq-1x1-2x1-3x1-7,8,9xnone.yml
@@ -18,6 +18,7 @@ pubsub_nodes:
       - prme_id: 3
         vm_id: 120
         count: "{{ sub_count_per_node }}"
+    host: "prme-nsx-perf-001"
 
   prme2-k8s-node-120:
     type: "subscriber"
