--- a/benchmarks/vmware/pubsub/roles/zeromq_vms/tasks/main.yml
+++ b/benchmarks/vmware/pubsub/roles/zeromq_vms/tasks/main.yml
@@ -8,6 +8,18 @@
   include: roles/zeromq_vms/tasks/common/remove.yml
   tags: remove_common
 
+- name: launch fanin
+  include: roles/zeromq_vms/tasks/fanin/launch.yml
+  tags: launch_fanin
+
+- name: destroy fanin
+  include: roles/zeromq_vms/tasks/fanin/destroy.yml
+  tags: destroy_fanin
+
+- name: collect fanin stats
+  include: roles/zeromq_vms/tasks/fanin/collect.yml
+  tags: collect_fanin_stats
+
 - name: launch fanout
   include: roles/zeromq_vms/tasks/fanout/launch.yml
   tags: launch_fanout
@@ -19,15 +31,3 @@
 - name: collect fanout stats
   include: roles/zeromq_vms/tasks/fanout/collect.yml
   tags: collect_fanout_stats
-
-- name: launch fanin
-  include: roles/zeromq_vms/tasks/fanin/launch.yml
-  tags: launch_fanin
-
-- name: destroy fanin
-  include: roles/zeromq_vms/tasks/fanin/destroy.yml
-  tags: destroy_fanin
-
-#- name: collect fanin stats
-#  include: roles/zeromq_vms/tasks/fanin/collect.yml
-#  tags: collect_fanin_stats
