--- a/benchmarks/vmware/pubsub/vars/zeromq_vms/configs/fanin/zeromq-1x1-2x1-3x1-7,8,9xnone.yml
+++ b/benchmarks/vmware/pubsub/vars/zeromq_vms/configs/fanin/zeromq-1x1-2x1-3x1-7,8,9xnone.yml
@@ -1,26 +1,24 @@
 ---
 
-sub:
+fanin_sub:
   prme_id: 1
   vm_id: 120
 
-pub_cmds: 'msleep (1);' # e.g. msleep(1);
+fanin_pub_cmds: 'msleep (1);' # e.g. msleep(1);
 
-pub_count_per_node: 2
+fanin_pub_count_per_node: 1
 
-pubsub_nodes:
+fanin_pubsub_nodes:
   prme1-k8s-node-120:
     type: "subscriber"
     host: "prme-nsx-perf-001"
 
   prme2-k8s-node-120:
     type: "publisher"
-    subs: # can only have one subscriber
-     - "{{ sub }}"
-    count: "{{ pub_count_per_node }}"
+    sub: "{{ fanin_sub }}"
+    count: "{{ fanin_pub_count_per_node }}"
 
   prme3-k8s-node-120:
     type: "publisher"
-    subs: # can only have one subscriber
-      - "{{ sub }}"
-    count: "{{ pub_count_per_node }}"
+    sub: "{{ fanin_sub }}"
+    count: "{{ fanin_pub_count_per_node }}"
