--- a/benchmarks/vmware/pubsub/roles/zeromq_vms/tasks/fanout/launch.yml
+++ b/benchmarks/vmware/pubsub/roles/zeromq_vms/tasks/fanout/launch.yml
@@ -2,8 +2,8 @@
 
 - name: set kvm vcpu affinity
   shell: taskset -a -p 0x0100 $(qm list | grep {{ inventory_hostname }} | awk '{print $6}')
-  when: '"publisher" in pubsub_nodes[inventory_hostname].type'
-  delegate_to: "{{ pubsub_nodes[inventory_hostname].host }}"
+  when: '"publisher" in fanout_pubsub_nodes[inventory_hostname].type'
+  delegate_to: "{{ fanout_pubsub_nodes[inventory_hostname].host }}"
 
 - pause:
     seconds: 2
@@ -14,8 +14,8 @@
     dest: /home/mshahbaz/libzmq/tests/dish_{{ port }}.cpp
   vars:
     port: "{{ pubsub_sub_port_base|int + item|int }}"
-  with_sequence: start=0 end={{ pubsub_nodes[inventory_hostname].count|int - 1 }} format=%d
-  when: '"subscriber" in pubsub_nodes[inventory_hostname].type'
+  with_sequence: start=0 end={{ fanout_pubsub_nodes[inventory_hostname].count|int - 1 }} format=%d
+  when: '"subscriber" in fanout_pubsub_nodes[inventory_hostname].type'
   become: true
 
 - name: build dish_*.cpp
@@ -23,36 +23,41 @@
          gcc dish_{{ port }}.cpp -o dish_{{ port }} -lzmq -O2
   vars:
     port: "{{ pubsub_sub_port_base|int + item|int }}"
-  with_sequence: start=0 end={{ pubsub_nodes[inventory_hostname].count|int - 1 }} format=%d
-  when: '"subscriber" in pubsub_nodes[inventory_hostname].type'
+  with_sequence: start=0 end={{ fanout_pubsub_nodes[inventory_hostname].count|int - 1 }} format=%d
+  when: '"subscriber" in fanout_pubsub_nodes[inventory_hostname].type'
   become: true
 
 - name: upload radio.cpp to publishers
   template:
     src: roles/zeromq_vms/templates/radio.cpp.j2
     dest: /home/mshahbaz/libzmq/tests/radio.cpp
-  when: '"publisher" in pubsub_nodes[inventory_hostname].type'
+  vars:
+    pub_cmds: "{{ fanout_pub_cmds }}"
+  when: '"publisher" in fanout_pubsub_nodes[inventory_hostname].type'
   become: true
 
 - name: add connections to radio.cpp
   include: roles/zeromq_vms/tasks/fanout/add_connection.yml __sub="{{ _sub }}"
-  with_items: "{{ pubsub_nodes[inventory_hostname].subs }}"
+  with_items: "{{ fanout_pubsub_nodes[inventory_hostname].subs }}"
   loop_control:
     loop_var: _sub
-  when: '"publisher" in pubsub_nodes[inventory_hostname].type'
+  when: '"publisher" in fanout_pubsub_nodes[inventory_hostname].type'
   become: true
 
 - name: build radio.cpp
   shell: cd /home/mshahbaz/libzmq/tests;
          gcc radio.cpp -o radio -lzmq -O2
-  when: '"publisher" in pubsub_nodes[inventory_hostname].type'
+  when: '"publisher" in fanout_pubsub_nodes[inventory_hostname].type'
   become: true
 
 - name: upload log_radio_stats.sh script to publishers
   template:
     src: roles/zeromq_vms/templates/log_radio_stats.sh.j2
     dest: /tmp/log_radio_stats.sh
-  when: '"publisher" in pubsub_nodes[inventory_hostname].type'
+  vars:
+    sub_count_per_node: "{{ fanout_sub_count_per_node }}"
+    pub_cmds: "{{ fanout_pub_cmds }}"
+  when: '"publisher" in fanout_pubsub_nodes[inventory_hostname].type'
   become: true
 
 - name: upload log_kvm_stats.sh script to publishers' host
@@ -60,17 +65,18 @@
     src: roles/zeromq_vms/templates/log_kvm_stats.sh.j2
     dest: /tmp/log_kvm_stats.sh
   vars:
-    count_per_node: "{{ sub_count_per_node }}"
-  when: '"publisher" in pubsub_nodes[inventory_hostname].type'
-  delegate_to: "{{ pubsub_nodes[inventory_hostname].host }}"
+    count_per_node: "{{ fanout_sub_count_per_node }}"
+    pub_cmds: "{{ fanout_pub_cmds }}"
+  when: '"publisher" in fanout_pubsub_nodes[inventory_hostname].type'
+  delegate_to: "{{ fanout_pubsub_nodes[inventory_hostname].host }}"
 
 - name: launch dish_*
   shell: cd /home/mshahbaz/libzmq/tests;
          ./dish_{{ port }} &
   vars:
     port: "{{ pubsub_sub_port_base|int + item|int }}"
-  with_sequence: start=0 end={{ pubsub_nodes[inventory_hostname].count|int - 1 }} format=%d
-  when: '"subscriber" in pubsub_nodes[inventory_hostname].type'
+  with_sequence: start=0 end={{ fanout_pubsub_nodes[inventory_hostname].count|int - 1 }} format=%d
+  when: '"subscriber" in fanout_pubsub_nodes[inventory_hostname].type'
   become: true
 
 - name: launch radio
@@ -78,7 +84,7 @@
          ./radio &
          sleep 2;
          taskset -a -p 0x4 $(pidof radio)
-  when: '"publisher" in pubsub_nodes[inventory_hostname].type'
+  when: '"publisher" in fanout_pubsub_nodes[inventory_hostname].type'
   become: true
 
 - pause:
@@ -86,11 +92,11 @@
 
 - name: log radio stats
   shell: sh /tmp/log_radio_stats.sh &
-  when: '"publisher" in pubsub_nodes[inventory_hostname].type'
+  when: '"publisher" in fanout_pubsub_nodes[inventory_hostname].type'
   become: true
 
 - name: log kvm stats
   shell: sh /tmp/log_kvm_stats.sh &
-  when: '"publisher" in pubsub_nodes[inventory_hostname].type'
-  delegate_to: "{{ pubsub_nodes[inventory_hostname].host }}"
+  when: '"publisher" in fanout_pubsub_nodes[inventory_hostname].type'
+  delegate_to: "{{ fanout_pubsub_nodes[inventory_hostname].host }}"
 
