--- a/benchmarks/vmware/pubsub/vars/zeromq_vms/main.yml
+++ b/benchmarks/vmware/pubsub/vars/zeromq_vms/main.yml
@@ -1,3 +1,5 @@
 ---
 
-configs: fanin/zeromq-1x1-2x1-3x1-7,8,9xnone
+configs:
+  fanout: zeromq-1x1-2x1-3x1-7,8,9xnone
+  fanin: zeromq-1x1-2x1-3x1-7,8,9xnone
