--- a/benchmarks/vmware/pubsub/roles/zeromq_vms/tasks/main.yml
+++ b/benchmarks/vmware/pubsub/roles/zeromq_vms/tasks/main.yml
@@ -8,6 +8,18 @@
   include: roles/zeromq_vms/tasks/common/remove.yml
   tags: remove_common
 
+- name: launch broker
+  include: roles/zeromq_vms/tasks/broker/launch.yml
+  tags: launch_broker
+
+- name: destroy broker
+  include: roles/zeromq_vms/tasks/broker/destroy.yml
+  tags: destroy_broker
+
+- name: collect broker stats
+  include: roles/zeromq_vms/tasks/broker/collect.yml
+  tags: collect_broker_stats
+
 - name: launch fanin
   include: roles/zeromq_vms/tasks/fanin/launch.yml
   tags: launch_fanin
