--- a/testbeds/vmware/roles/proxmox_dc/tasks/networking/cleanup.yml
+++ b/testbeds/vmware/roles/proxmox_dc/tasks/networking/cleanup.yml
@@ -1,5 +1,8 @@
 ---
 
+- name: remove iptables rule to filter traffic coming from eth0 belonging to the overlay subnet
+  shell: iptables -D INPUT -s {{ proxmox_vm_network_address_prefix }}0.0/16 -i eth0 -j DROP
+
 - name: cleanup ovs (dpdk)
   include: roles/proxmox_dc/tasks/networking/switches/ovs_dpdk/cleanup.yml
   when: 'dc_switch.type == "ovs_dpdk"'
