--- a/testbeds/vmware/roles/proxmox_tor/defaults/main.yml
+++ b/testbeds/vmware/roles/proxmox_tor/defaults/main.yml
@@ -1,14 +1,16 @@
 ---
 
+proxmox_vm_network_address_prefix: 192.168.
+
 nodes:
   prme-nsx-perf-004:
     interfaces:
       - eth2 # prme-nsx-perf-001
       - eth5 # prme-nsx-perf-002
       - eth8 # prme-nsx-perf-003
-      - eth9 # prme-nsx-perf-005:eth2
+#      - eth9 # prme-nsx-perf-005:eth2
 #      - eth6 # prme-nsx-perf-005:eth5
-#      - eth7 # prme-nsx-perf-005:eth8
+      - eth7 # prme-nsx-perf-005:eth8
     options:
       eth2:
         pci_id: "0000:41:00.0"
@@ -18,24 +20,27 @@ nodes:
         if_index: 2
       eth8:
         pci_id: "0000:44:00.0"
-        if_index: 3
-      eth9:
-        pci_id: "0000:44:00.1"
         if_index: 4
+#      eth9:
+#        pci_id: "0000:44:00.1"
+#        if_index: -
 #      eth6:
 #        pci_id: "0000:43:00.0"
 #        if_index: -
-#      eth7:
-#        pci_id: "0000:43:00.1"
-#        if_index: -
+      eth7:
+        pci_id: "0000:43:00.1"
+        if_index: 3
+    dpdk:
+      cpu_mask: '0x0AA0'
+      memory_channels: 4
   prme-nsx-perf-006:
     interfaces:
       - eth8 # prme-nsx-perf-007
       - eth1 # prme-nsx-perf-008
       - eth4 # prme-nsx-perf-009
-      - eth7 # prme-nsx-perf-005:eth6
+#      - eth7 # prme-nsx-perf-005:eth6
 #      - eth9 # prme-nsx-perf-005:eth7
-#      - eth6 # prme-nsx-perf-005:eth9
+      - eth6 # prme-nsx-perf-005:eth9
     options:
       eth8:
         pci_id: "0000:42:00.0"
@@ -46,24 +51,23 @@ nodes:
       eth4:
         pci_id: "0000:04:00.1"
         if_index: 2
-      eth7:
-        pci_id: "0000:41:00.1"
-        if_index: 3
+#      eth7:
+#        pci_id: "0000:41:00.1"
+#        if_index: -
 #      eth9:
 #        pci_id: "0000:42:00.1"
 #        if_index: -
-#      eth6:
-#        pci_id: "0000:41:00.0"
-#        if_index: -
+      eth6:
+        pci_id: "0000:41:00.0"
+        if_index: 3
+    dpdk:
+      cpu_mask: '0x0CC0'
+      memory_channels: 4
 
 switches:
   pisces:
-    cflags: '-Ofast -march=native -Wno-cast-align'
-    cpu_mask: '0xFFF0'
-    memory_channels: 4
+    cflags: '-O2 -Wno-cast-align' # Options: -g or ''
     p4_programs:
       base_dir: files
   ovs_dpdk:
-    cflags: '-Ofast -march=native -Wno-cast-align' # Options: -g or ''
-    cpu_mask: '0xFFF0'
-    memory_channels: 4
+    cflags: '-O2 -Wno-cast-align' # Options: -g or ''
