--- a/testbeds/vmware/roles/proxmox_tor/tasks/networking/setup.yml
+++ b/testbeds/vmware/roles/proxmox_tor/tasks/networking/setup.yml
@@ -12,7 +12,9 @@
   include: roles/proxmox_tor/tasks/networking/switches/ovs_dpdk/setup.yml
   when: 'tor_switch.type == "ovs_dpdk"'
 
-
 - name: setup linux bridge
   include: roles/proxmox_tor/tasks/networking/switches/linux_bridge/setup.yml
   when: 'tor_switch.type == "linux_bridge"'
+
+- name: add iptables rule to filter traffic coming from eth0 belonging to the overlay subnet
+  shell: iptables -I INPUT -s {{ proxmox_vm_network_address_prefix }}0.0/16 -i eth0 -j DROP
