--- a/testbeds/vmware/roles/proxmox/tasks/networking/overlay/create.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/networking/overlay/create.yml
@@ -24,6 +24,10 @@
   include: roles/proxmox/tasks/networking/overlay/add_tunnel.yml remote_node="{{ item }}"
   with_items: "{{ networking[inventory_hostname]['remote_nodes'] }}"
 
+- name: add static arp entries
+  include: roles/proxmox/tasks/networking/overlay/add_arp.yml remote_node="{{ item }}"
+  with_items: "{{ networking[inventory_hostname]['remote_nodes'] }}"
+
 - name: add static route for overlay traffic
   shell: ip route add {{ proxmox_vm_network_address_prefix }}0.0/16 dev vmbr0
 
