--- a/testbeds/vmware/vars/proxmox/network/public_interface.yml
+++ b/testbeds/vmware/vars/proxmox/network/public_interface.yml
@@ -4,72 +4,72 @@ networking:
   prme-nsx-perf-001:
     remote_nodes:
       - prme_id: 2
-        address: 10.115.40.159
+        interface: eth0
       - prme_id: 3
-        address: 10.115.40.160
+        interface: eth0
       - prme_id: 7
-        address: 10.115.40.96
+        interface: eth0
       - prme_id: 8
-        address: 10.115.40.97
+        interface: eth0
       - prme_id: 9
-        address: 10.115.40.98
+        interface: eth0
   prme-nsx-perf-002:
     remote_nodes:
       - prme_id: 1
-        address: 10.115.40.158
+        interface: eth0
       - prme_id: 3
-        address: 10.115.40.160
+        interface: eth0
       - prme_id: 7
-        address: 10.115.40.96
+        interface: eth0
       - prme_id: 8
-        address: 10.115.40.97
+        interface: eth0
       - prme_id: 9
-        address: 10.115.40.98
+        interface: eth0
   prme-nsx-perf-003:
     remote_nodes:
       - prme_id: 1
-        address: 10.115.40.158
+        interface: eth0
       - prme_id: 2
-        address: 10.115.40.159
+        interface: eth0
       - prme_id: 7
-        address: 10.115.40.96
+        interface: eth0
       - prme_id: 8
-        address: 10.115.40.97
+        interface: eth0
       - prme_id: 9
-        address: 10.115.40.98
+        interface: eth0
   prme-nsx-perf-007:
     remote_nodes:
       - prme_id: 1
-        address: 10.115.40.158
+        interface: eth0
       - prme_id: 2
-        address: 10.115.40.159
+        interface: eth0
       - prme_id: 3
-        address: 10.115.40.160
+        interface: eth0
       - prme_id: 8
-        address: 10.115.40.97
+        interface: eth0
       - prme_id: 9
-        address: 10.115.40.98
+        interface: eth0
   prme-nsx-perf-008:
     remote_nodes:
       - prme_id: 1
-        address: 10.115.40.158
+        interface: eth0
       - prme_id: 2
-        address: 10.115.40.159
+        interface: eth0
       - prme_id: 3
-        address: 10.115.40.160
+        interface: eth0
       - prme_id: 7
-        address: 10.115.40.96
+        interface: eth0
       - prme_id: 9
-        address: 10.115.40.98
+        interface: eth0
   prme-nsx-perf-009:
     remote_nodes:
       - prme_id: 1
-        address: 10.115.40.158
+        interface: eth0
       - prme_id: 2
-        address: 10.115.40.159
+        interface: eth0
       - prme_id: 3
-        address: 10.115.40.160
+        interface: eth0
       - prme_id: 7
-        address: 10.115.40.96
+        interface: eth0
       - prme_id: 8
-        address: 10.115.40.97
+        interface: eth0
