--- a/testbeds/vmware/roles/proxmox_dc/tasks/main.yml
+++ b/testbeds/vmware/roles/proxmox_dc/tasks/main.yml
@@ -1,5 +1,13 @@
 ---
 
+- name: install pisces
+  include: roles/proxmox_dc/tasks/networking/switches/pisces/build/setup.yml
+  tags: install_pisces
+
+- name: clean pisces
+  include: roles/proxmox_dc/tasks/networking/switches/pisces/build/cleanup.yml
+  tags: clean_pisces
+
 - name: install ovs (dpdk)
   include: roles/proxmox_dc/tasks/networking/switches/ovs_dpdk/build/setup.yml
   tags: install_ovs_dpdk
