--- a/testbeds/vmware/roles/proxmox_dc/tasks/networking/setup.yml
+++ b/testbeds/vmware/roles/proxmox_dc/tasks/networking/setup.yml
@@ -1,5 +1,9 @@
 ---
 
+- name: setup pisces
+  include: roles/proxmox_dc/tasks/networking/switches/pisces/setup.yml
+  when: 'dc_switch.type == "pisces"'
+
 - name: setup ovs (dpdk)
   include: roles/proxmox_dc/tasks/networking/switches/ovs_dpdk/setup.yml
   when: 'dc_switch.type == "ovs_dpdk"'
