--- a/testbeds/vmware/vars/proxmox_dc/main.yml
+++ b/testbeds/vmware/vars/proxmox_dc/main.yml
@@ -1,7 +1,17 @@
 ---
 
 dc_switch:
-  type: "ovs_dpdk" # Options: linux_bridge, ovs_dpdk
+  type: "pisces" # Options: linux_bridge, ovs_dpdk, pisces
+  pisces:
+    p4_program: "baseerat.p4"
+    flow_rules: # Also, see defaults/main.yml for eths' if_indexes.
+      prme-nsx-perf-005:
+        - "table=0,priority=10,ipv4__dstAddr=0xAC108C9E actions=1" # to prme-nsx-perf-001
+        - "table=0,priority=10,ipv4__dstAddr=0xAC108C9F actions=1" # to prme-nsx-perf-002
+        - "table=0,priority=10,ipv4__dstAddr=0xAC108CA0 actions=1" # to prme-nsx-perf-003
+        - "table=0,priority=10,ipv4__dstAddr=0xAC108C60 actions=2" # to prme-nsx-perf-007
+        - "table=0,priority=10,ipv4__dstAddr=0xAC108C61 actions=2" # to prme-nsx-perf-008
+        - "table=0,priority=10,ipv4__dstAddr=0xAC108C62 actions=2" # to prme-nsx-perf-009
   ovs_dpdk:
     flow_rules: # Also, see defaults/main.yml for eths' if_indexes.
       prme-nsx-perf-005:
@@ -10,4 +20,4 @@ dc_switch:
         - "table=0,priority=10,ip,nw_dst=172.16.140.160 actions=1" # to prme-nsx-perf-003
         - "table=0,priority=10,ip,nw_dst=172.16.140.96 actions=2" # to prme-nsx-perf-007
         - "table=0,priority=10,ip,nw_dst=172.16.140.97 actions=2" # to prme-nsx-perf-008
-        - "table=0,priority=10,ip,nw_dst=172.16.140.98 actions=2" # to prme-nsx-perf-009ip
+        - "table=0,priority=10,ip,nw_dst=172.16.140.98 actions=2" # to prme-nsx-perf-009
